2007-02-06  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/clock.c (timesub): The result must always be positive.

2007-02-05  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-zd-mtx.sh.in: Fix for sed and IMPORT/EXPORT.

2007-02-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Add parentheses.

2007-02-02  Jean-Louis Martineau <martineau@zmanda.com>
	* docs/*.txt: Update from xml-docs.

2007-02-02  Jean-Louis Martineau <martineau@zmanda.com>
	* man/Makefile.am: Use http://docbook.sourceforge.net
	* man/xml-source/amadmin.8.xml, man/xml-source/amaespipe.8.xml,
	  man/xml-source/amanda.8.xml, man/xml-source/amanda-client.conf.5.xml,
	  man/xml-source/amanda.conf.5.xml, man/xml-source/amcheck.8.xml,
	  man/xml-source/amcrypt.8.xml, man/xml-source/amdump.8.xml,
	  man/xml-source/amfetchdump.8.xml, man/xml-source/amflush.8.xml,
	  man/xml-source/amgetconf.8.xml, man/xml-source/amlabel.8.xml,
	  man/xml-source/ammt.8.xml, man/xml-source/amrecover.8.xml,
	  man/xml-source/amreport.8.xml,
	  man/xml-source/amtape.8.xml: Fix for xmllint.
	* man/xslt/man.xsl: Remove bogus code.

2007-02-01  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-zd-mtx.sh.in: Support IMPORT/EXPORT slot.

2007-02-01  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amdump.sh.in: Output a starttime line.
	* server-src/amflush.c: Output a starttime line.
	* server-src/amstatus.pl.in: parse the starttime line.

2007-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amdump.sh.in: Exit with a status.

2007-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c: Use hostnext pointer.

2007-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/reporter.c: Exit with a status.

2007-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl.in: Exit with a status.

2007-01-26  Jean-Louis Martineau <martineau@zmanda.com>